# ausim2

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  em_run.sh  plan.md  run_remote_control.sh
assets/crazyfile/: cf2.xml  scene.dynamic_obstacles.xml  scene.xml
assets/omnidrone/: omnidrone.xml  scene.dynamic_obstacles.xml  scene.xml
assets/scout_v2/: scene.dynamic_obstacles.xml  scout_v2.xml
assets/scout_v2/assets/: IntelRealsense_D435.STL  LiDar16.STL
ausim_common/: CMakeLists.txt
ausim_common/src/config/: quadrotor_config.cpp  quadrotor_config.hpp
ausim_common/src/controller/: state.hpp
ausim_common/src/converts/ausim_msg/: robot_mode.cpp  robot_mode.hpp
ausim_common/src/converts/data/: clock.cpp  common.cpp  common.hpp  imu.cpp  imu.hpp  lidar.cpp  lidar.hpp  odom.hpp
ausim_common/src/data/: clock.hpp  common.hpp  transform.hpp
ausim_common/src/ipc/: bridge_packets.hpp  lidar_packet.hpp  socket_stream.hpp
ausim_common/src/manager/: ros_bridge_process_manager.cpp  ros_bridge_process_manager.hpp
ausim_common/src/ros/: ros2_bridge.cpp  ros2_bridge.hpp  ros_bridge_main.cpp
ausim_common/src/ros/publisher/: i_telemetry_publisher.hpp
ausim_common/src/ros/subscriber/: i_command_subscriber.hpp
ausim_common/src/runtime/: data_board_channels.hpp  data_board_interface.cpp  data_board_interface.hpp  lidar_snapshot.hpp  runtime_types.hpp  state.hpp
ausim_common/src/sim/: dynamic_obstacle_runtime.cpp  dynamic_obstacle_runtime.hpp
ausim_common/tests/: ausim_msg_interface_test.cpp  dyn_obstacle_data_publisher_qos_test.cpp  dynamic_obstacle_registry_config_test.cpp  joy_interface_config_test.cpp  lidar_data_publisher_test.cpp  robot_mode_semantic_test.cpp  robot_mode_state_machine_test.cpp
docs/: ros_message_architecture.md
ground_vehicle/: CMakeLists.txt  README.md
ground_vehicle/cfg/: ground_vehicle_registry.yaml  sim_config.yaml
ground_vehicle/cfg/robot/: scout_v2_config.yaml
ground_vehicle/src/: main.cpp
ground_vehicle/src/sim/: scout_sim.cpp  scout_sim.hpp
ground_vehicle/tests/: dynamic_obstacle_test.cpp  dynamic_obstacle_viewer_publish_test.cpp
quadrotor/: CMakeLists.txt  README.md
quadrotor/cfg/: quadrotor_registry.yaml  robot_config.yaml  sim_config.yaml
quadrotor/cfg/robot/: crazyfile_config.yaml  omnidrone_config.yaml  xi35_config.yaml
quadrotor/cfg/teleop/: quadrotor_default.yaml
quadrotor/src/: main.cpp
quadrotor/src/app/: quadrotor_app.cpp  quadrotor_app.hpp
quadrotor/src/common/db/: data_board.hpp  security_data.hpp
quadrotor/src/config/: quadrotor_config.cpp  quadrotor_config.hpp
quadrotor/src/controller/: se3_controller.cpp  se3_controller.hpp
quadrotor/src/converts/data/: clock.cpp  clock.hpp  cmd_vel.cpp  cmd_vel.hpp  common.cpp  common.hpp  image.cpp  image.hpp  imu.cpp  imu.hpp  odom.cpp  odom.hpp  transform.cpp  transform.hpp
quadrotor/src/converts/ipc/: bridge_packets.cpp  bridge_packets.hpp
quadrotor/src/data/: cmd_vel.hpp  image.hpp  imu.hpp  odom.hpp
quadrotor/src/ipc/: bridge_packets.hpp  socket_packet.hpp
quadrotor/src/manager/: ros_bridge_process_manager.cpp  ros_bridge_process_manager.hpp
quadrotor/src/ros/: ros2_bridge.cpp  ros2_bridge.hpp  ros_bridge_main.cpp
quadrotor/src/ros/publisher/data/: clock_data_publisher.cpp  clock_data_publisher.hpp  image_data_publisher.hpp  imu_data_publisher.cpp  imu_data_publisher.hpp  odom_data_publisher.cpp  odom_data_publisher.hpp  transform_data_publisher.cpp  transform_data_publisher.hpp
quadrotor/src/ros/subscriber/data/: cmd_vel_command_subscriber.cpp  cmd_vel_command_subscriber.hpp
quadrotor/src/runtime/: command_mailbox.cpp  command_mailbox.hpp  data_board_channels.hpp  data_board_interface.cpp  data_board_interface.hpp  goal_provider.cpp  goal_provider.hpp  quadrotor_runtime_types.hpp  runtime_types.hpp  telemetry_cache.cpp  telemetry_cache.hpp  vehicle_runtime.cpp  vehicle_runtime.hpp
quadrotor/src/sim/: camera_renderer.cpp  camera_renderer.hpp  mujoco_actuator_writer.cpp  mujoco_actuator_writer.hpp  mujoco_bindings.cpp  mujoco_bindings.hpp  mujoco_state_reader.cpp  mujoco_state_reader.hpp  quadrotor_sim.cpp  quadrotor_sim.hpp
quadrotor/tests/: dynamic_obstacle_viewer_publish_test.cpp  model_sensor_binding_test.cpp  reset_simulation_test.cpp  takeoff_goal_provider_test.cpp
reference/src1/common/db/: CMakeLists.txt  data_board_test.cc  security_waitable_data.h  sercurity_rpc_data.h  waitable.h
reference/src1/common/parameter/: param_manager.h  (+2 more)
reference/src1/converts/: CMakeLists.txt  converts.h
reference/src1/converts/data/: imu.cc  imu.h  odom.cc  odom.h
reference/src1/converts/joint/: joint_command.cc  joint_command.h  joint_state.cc  joint_state.h
reference/src1/data/: CMakeLists.txt  imu.hpp  joint.hpp  odom.hpp  raycaster.hpp
src1/app/: CMakeLists.txt  main.cpp
src1/common/db/: data_board.h  data_board_id.h  data_board_lock.h  security_data.h
src1/common/parameter/: param_reader.h  param_reflection.h  param_server.h  param_write.h
src1/converts/data/: raycaster.cc  raycaster.h
src1/converts/joint/: hand_command.cc  hand_command.h  hand_state.cc  hand_state.h
src1/data/: named.hpp  op_cmd.hpp
src1/install/: CMakeLists.txt
src1/manager/aimrt/: CMakeLists.txt  global.cc  global.h
src1/manager/client/: CMakeLists.txt  client_cfg.h  client_manager.cc
src1/manager/executor/: cycle_free_executor.h  time_wheel_executor.cc  time_wheel_executor.h  worker.cc  worker.h
src1/manager/publisher/: publisher_base.h  publisher_manager.h
src1/manager/service/: CMakeLists.txt  service_base.cc  service_base.h  service_cfg.h  service_manager.cc  service_manager.h
src1/manager/subscriber/: CMakeLists.txt  subscriber_base.cc  subscriber_cfg.h  subscriber_manager.cc  subscriber_manager.h
src1/module/: CMakeLists.txt
src1/module/core/: CMakeLists.txt  core.cc  core.h
src1/module/mujoco/: CMakeLists.txt  interface.h  model_manager.cc  model_manager.h  simulation_controller.h
src1/module/publisher/: CMakeLists.txt  publisher.h
src1/module/subscriber/: CMakeLists.txt  subscriber.h
(+99 files in other folders)
